# fire-crust-back-end

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: core.py  db.py  deps.py  main.py  models.py  schemas.py  security.py
app/routers/: __init__.py  auth.py  cart.py  dashboard.py  menu.py  orders.py
db/: seed_menu_items.sql
fire_crust_back_end.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_app.py
